--- a/rootdir/etc/init.mt6768.rc
+++ b/rootdir/etc/init.mt6768.rc
@@ -934,6 +934,8 @@ on property:persist.vendor.mediatek.fg.log.enable=1
 on property:vendor.mtk.md1.status=reset
     setprop persist.vendor.atm.mdmode normal
 
+on property:persist.vendor.radio.port_index=""
+    setprop sys.usb.config adb
 
 # Disable AOSP RIL if MTK RIL is up
 on property:vendor.ril.mtk=1
